# visagen

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  CONTRIBUTING_TR.md  Dockerfile  LICENSE  README.md  README_TR.md  docker-compose.yml  install.bat  install.py  install.sh  pyproject.toml
.github/workflows/: ci.yml  docker.yml
config/: train_example.yaml
configs/data/: custom.yaml  ffhq.yaml
configs/model/: amp.yaml  quick96.yaml  saehd.yaml
configs/trainer/: default.yaml  gan.yaml
models/face-parsing/: config.json  model.safetensors
scripts/: docker-build.sh  docker-run.sh
visagen/: __init__.py
visagen/benchmark/: __init__.py  config.py  profilers.py  reporters.py
visagen/benchmark/benchmarks/: __init__.py  inference.py  merger.py  training.py
visagen/configs/: default.yaml
visagen/data/: __init__.py  augmentations.py  dali_loader.py  dali_pipeline.py  dali_warp.py  datamodule.py  face_dataset.py  face_sample.py  mask_dataset.py  noise_dataset.py  pretrain_datamodule.py  sequence_dataset.py  warp.py
visagen/export/: __init__.py  model_wrapper.py  onnx_exporter.py  onnx_runner.py  tensorrt_builder.py  tensorrt_runner.py  validation.py
visagen/gui/: __init__.py  app.py  batch.py  command_builders.py  presets.py  theme.py  utils.py
visagen/gui/components/: __init__.py  base.py  controls.py  displays.py  faceset_browser.py  inputs.py  mask_canvas.py  mask_preview.py  notifications.py  poly_editor.py  progress.py  system_monitor.py  workflow.py  workflow_steps.py
visagen/gui/i18n/: __init__.py  en.py  locales.py  tr.py
visagen/gui/state/: __init__.py  app_state.py
visagen/gui/tabs/: __init__.py  base.py  batch.py  benchmark.py  compare.py  export.py  extract.py  faceset_tools.py  inference.py  interactive_merge.py  mask_editor.py  merge.py  postprocess.py  settings.py  sort.py  training.py  video_tools.py  wizard.py
visagen/merger/: __init__.py  batch_processor.py  frame_processor.py  interactive.py  interactive_config.py  merger.py  video_io.py
visagen/models/: __init__.py
visagen/models/architectures/: __init__.py  amp.py  df.py  liae.py  quick96.py
visagen/models/decoders/: __init__.py  decoder.py
visagen/models/discriminators/: __init__.py  code_discriminator.py  patch_discriminator.py  temporal_discriminator.py
visagen/models/encoders/: __init__.py  convnext.py
visagen/models/experimental/: __init__.py  diffusion.py  eg3d.py
visagen/models/layers/: __init__.py  adain.py  attention.py
visagen/postprocess/: __init__.py  blending.py  color_transfer.py  color_transfer_gpu.py  degrade.py  gpen.py  motion_blur.py  neural_color.py  restore.py
visagen/sorting/: __init__.py  absdiff.py  base.py  blur.py  color.py  composite.py  cpbd.py  embedding.py  histogram.py  metadata.py  pose.py  processor.py  similarity.py
visagen/tests/: __init__.py  test_adain.py  test_amp_architecture.py  test_app_state_settings_autoload.py  test_batch_tab.py  test_benchmark.py  test_blending.py  test_blur_out_mask.py  test_code_discriminator.py  test_color_transfer.py  test_color_transfer_modes.py  test_command_file_reader_callback.py  test_dali.py  test_dali_warp_parity.py  test_data.py  test_dataset_cleaner.py  test_dataset_trash.py  test_df_architecture.py  test_dfl_module_integration.py  test_dfl_optimizer_config.py  test_discriminator.py  test_e2e_training.py  test_experimental.py  test_export.py  test_extraction_edge_cases.py  test_faceset_tools.py  test_forward_pass.py  test_frame_processor_blending_imports.py  test_frame_processor_detector_contract.py  test_gan_training.py  test_gpen.py  test_gradio.py  test_gui_command_builders.py  test_interactive_config_mapping.py  test_interactive_mapping_modes.py  test_io.py  test_landmark_flow.py  test_landmark_normalization.py  test_liae_architecture.py  test_losses.py  (+29 more)
visagen/tools/: __init__.py  benchmark.py  dataset_cleaner.py  dataset_trash.py  export.py  extract_v2.py  faceset_enhancer.py  faceset_resizer.py  gradio_app.py  mask_export.py  merge.py  pretrain.py  sorter.py  train.py  train_segformer.py  tune.py  util_compat.py  util_legacy.py  video_ed.py
visagen/training/: __init__.py  callbacks.py  dfl_module.py  diffusion_losses.py  losses.py  pretrain_module.py  segformer_finetune.py  training_module.py
visagen/training/optimizers/: adabelief.py
visagen/tuning/: __init__.py  optuna_tuner.py
visagen/utils/: __init__.py  config.py  io.py
visagen/vision/: __init__.py  aligner.py  cache.py  detector.py  dflimg.py  face_image.py  face_type.py  mask_export.py  mask_ops.py  poly_render.py  poly_spatial_index.py  polys.py  segmenter.py  segmenter_lora.py
