[project]
name = "visagen"
version = "2.0.0-alpha"
description = "Modern Face Swapping Framework with PyTorch Lightning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Visagen Team", email = "contact@visagen.ai"}
]
keywords = ["deepfake", "face-swap", "pytorch", "lightning", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
training = [
    "lpips>=0.1.4",
]
vision = [
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.16.0",
    "transformers>=4.35.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.65.0",
]
postprocess = [
    "scipy>=1.10.0",
    "opencv-python>=4.8.0",
]
tuning = [
    "optuna>=3.0.0",
    "optuna-integration[pytorch_lightning]>=3.0.0",
]
gui = [
    "gradio>=4.0.0",
]
full = [
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "insightface>=0.7.0",
    "opencv-python>=4.8.0",
    "albumentations>=1.3.0",
    "kornia>=0.7.0",
    "transformers>=4.35.0",
    "tqdm>=4.65.0",
    "lpips>=0.1.4",
    "scipy>=1.10.0",
    "optuna>=3.0.0",
    "optuna-integration[pytorch_lightning]>=3.0.0",
    "gradio>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/karasungur/visagen"
Documentation = "https://github.com/karasungur/visagen#readme"
Repository = "https://github.com/karasungur/visagen"
Issues = "https://github.com/karasungur/visagen/issues"

[project.scripts]
visagen-extract = "visagen.tools.extract_v2:main"
visagen-train = "visagen.tools.train:main"
visagen-tune = "visagen.tools.tune:main"
visagen-gui = "visagen.tools.gradio_app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["visagen*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["visagen"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["visagen/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
