[project]
name = "visagen"
version = "2.0.0-alpha"
description = "Modern Face Swapping Framework with PyTorch Lightning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Visagen Team", email = "contact@visagen.ai"}
]
keywords = ["deepfake", "face-swap", "pytorch", "lightning", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-lightning>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-image>=0.21.0",
    "pyyaml>=6.0",
    "Pillow>=9.0.0",
    "tqdm>=4.65.0",
    "portalocker>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.12",
]
training = [
    "lpips>=0.1.4",
]
vision = [
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.16.0",
    "transformers>=4.35.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.65.0",
]
postprocess = [
    "scipy>=1.10.0",
    "opencv-python>=4.8.0",
]
tuning = [
    "optuna>=3.0.0",
    "optuna-integration[pytorch_lightning]>=3.0.0",
]
gui = [
    "gradio>=4.0.0",
]
merger = [
    "ffmpeg-python>=0.2.0",
    "imageio-ffmpeg>=0.4.8",
    "opencv-python>=4.8.0",
    "tqdm>=4.65.0",
]
export = [
    "onnx>=1.14.0",
    "onnxruntime-gpu>=1.16.0",
    "onnxscript>=0.1.0",
    "onnx-simplifier>=0.4.0; python_version < '3.12'",
]
tensorrt = [
    "tensorrt>=8.6.0",
    "pycuda>=2022.1",
]
dali = [
    # NVIDIA DALI for GPU-accelerated data loading
    # NOTE: Linux only - pip install nvidia-dali-cuda120
    "nvidia-dali-cuda120>=1.30.0",
]
restore = [
    # GFPGAN face restoration
    "gfpgan>=1.3.8",
    "basicsr>=1.4.2",
    "facexlib>=0.3.0",
    "realesrgan>=0.3.0",
]
experimental = [
    # Diffusion AutoEncoder dependencies
    "diffusers>=0.24.0",
    "accelerate>=0.25.0",
    "xformers>=0.0.22; sys_platform == 'linux'",
    "transformers>=4.35.0",
    # EG3D dependencies (optional, for advanced 3D features)
    # "pytorch3d>=0.7.0",  # Requires special installation
    # "nvdiffrast>=0.3.0",  # NVIDIA differentiable rasterizer
]
full = [
    # ONNX ecosystem (GPU)
    "onnx>=1.14.0",
    "onnxruntime-gpu>=1.16.0",
    "onnxscript>=0.1.0",
    "onnx-simplifier>=0.4.0; python_version < '3.12'",
    # Vision
    "insightface>=0.7.3",
    "opencv-python>=4.8.0",
    # Data augmentation
    "albumentations>=1.3.0",
    "kornia>=0.7.0",
    # ML utilities
    "transformers>=4.35.0",
    "tqdm>=4.65.0",
    "lpips>=0.1.4",
    "scipy>=1.10.0",
    "portalocker>=2.7.0",
    # Hyperparameter tuning
    "optuna>=3.0.0",
    "optuna-integration[pytorch_lightning]>=3.0.0",
    # GUI
    "gradio>=4.0.0",
    # Video I/O
    "ffmpeg-python>=0.2.0",
    "imageio-ffmpeg>=0.4.8",
]
full-cpu = [
    # ONNX ecosystem (CPU)
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "onnxscript>=0.1.0",
    "onnx-simplifier>=0.4.0; python_version < '3.12'",
    # Vision
    "insightface>=0.7.3",
    "opencv-python>=4.8.0",
    # Data augmentation
    "albumentations>=1.3.0",
    "kornia>=0.7.0",
    # ML utilities
    "transformers>=4.35.0",
    "tqdm>=4.65.0",
    "lpips>=0.1.4",
    "scipy>=1.10.0",
    "portalocker>=2.7.0",
    # Hyperparameter tuning
    "optuna>=3.0.0",
    "optuna-integration[pytorch_lightning]>=3.0.0",
    # GUI
    "gradio>=4.0.0",
    # Video I/O
    "ffmpeg-python>=0.2.0",
    "imageio-ffmpeg>=0.4.8",
]

[project.urls]
Homepage = "https://github.com/karasungur/visagen"
Documentation = "https://github.com/karasungur/visagen#readme"
Repository = "https://github.com/karasungur/visagen"
Issues = "https://github.com/karasungur/visagen/issues"

[project.scripts]
visagen-extract = "visagen.tools.extract_v2:main"
visagen-train = "visagen.tools.train:main"
visagen-pretrain = "visagen.tools.pretrain:main"
visagen-tune = "visagen.tools.tune:main"
visagen-gui = "visagen.gui.app:main"
visagen-merge = "visagen.tools.merge:main"
visagen-export = "visagen.tools.export:main"
visagen-sort = "visagen.tools.sorter:main"
visagen-benchmark = "visagen.tools.benchmark:main"
visagen-video = "visagen.tools.video_ed:main"
visagen-enhance = "visagen.tools.faceset_enhancer:main"
visagen-resize = "visagen.tools.faceset_resizer:main"
visagen-clean = "visagen.tools.dataset_cleaner:main"
visagen-mask-export = "visagen.tools.mask_export:main"
visagen-util = "visagen.tools.util_compat:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["visagen*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from - not enforced (stylistic)
    "E741",   # ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"visagen/tests/*.py" = ["E402"]  # Allow late imports in test files
"visagen/export/*.py" = ["F821"]  # Forward references in type hints
"visagen/merger/*.py" = ["F821"]  # Forward references in type hints
"visagen/tuning/*.py" = ["F821"]  # Forward references in type hints
"visagen/sorting/*.py" = ["F821"]  # Forward references in type hints
"visagen/tools/*.py" = ["F401"]  # Runtime import checks
"visagen/vision/*.py" = ["F401"]  # Optional dependency imports
"visagen/benchmark/*.py" = ["F821"]  # Forward references in type hints
"visagen/models/experimental/*.py" = ["F401"]  # Lazy imports

[tool.ruff.lint.isort]
known-first-party = ["visagen"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["visagen/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
